--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,24 @@
 ---
+import '@/styles/globals.css'
 import Base from "@/layouts/Base.astro";
 import Banner from "@/layouts/components/Banner.astro";
 import KeyFeatures from "@/layouts/components/KeyFeatures.astro";
 import Testimonial from "@/layouts/components/Testimonial.astro";
 import Service from "@/layouts/components/Service.astro";
 import Cta from "@/layouts/partials/Cta.astro";
-import { getEntryBySlug } from "astro:content";
+import PropertyView from "../components/PropertyView.jsx";
+import { getEntry } from "astro:content";
 
-const homepage = await getEntryBySlug("homepage", "index");
+const homepage = await getEntry("homepage", "index");
 const { banner, key_features, service, testimonial } = homepage.data;
 ---
 
 <Base>
   <!-- banner -->
-  <Banner banner={banner} />
+  <!-- <Banner banner={banner} /> -->
+  <PropertyView client:load />
   <!-- key features -->
-  <KeyFeatures key_features={key_features} />
+  <!-- <KeyFeatures key_features={key_features} /> -->
   <!-- service -->
   <Service service={service} />
   <!-- testimonial -->
