--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -117,7 +117,7 @@ const { pathname } = Astro.url;
       </li>
     </ul>
     <div class="order-1 ml-auto hidden items-center md:order-2 md:ml-0 lg:flex">
-      <a class="btn btn-white btn-sm" href="/signin"> Sing Up Now</a>
+      <a class="btn btn-white btn-sm" href="/signin"> Sign Up Now</a>
     </div>
   </nav>
 </header>
